Fixed contrast ratio for page subtitle - Accessibility best practice

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1850,7 +1850,7 @@ article h1,article h2,article h3,article h4,article h5,article h6,article .h1,ar
 
 .page-title p {
   /*text: center;*/
-  color: #888;
+  color: #424242;
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 0px;
